# Triangles_3D

./: .gitignore  CMakeLists.txt  README.md  a.out  dot.cpp  geom.hpp  test  test.cpp  test2  test2.cpp  triang  triang.cpp
lib/: .geom.hpp.swp  README.md  geom.hpp  geom_2.hpp  intersection.hpp  matrix.hpp  segment.hpp  triangle.hpp  vector_3D.hpp
unit_tests/algos/: CMakeLists.txt  unit_tests.cpp
unit_tests/interface/: CMakeLists.txt  unit_tests.cpp
